edit netlify site id

--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -23,5 +23,5 @@ jobs:
           overwrites-pull-request-comment: true
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.JjfsrBxJe3ZV_bV5KEfQaBLa11-OTxZuXajorXPp3j0 }}
-          NETLIFY_SITE_ID: ${{ secrets.4cd39317-f8af-4657-92c3-fec7f3f0e6c9 }}
+          NETLIFY_SITE_ID: 4cd39317-f8af-4657-92c3-fec7f3f0e6c9
         timeout-minutes: 1
