--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v1.2
         with:
-          publish-dir: '../../build'
+          publish-dir: '../build'
           production-branch: main
           github-token: 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
           deploy-message: 'Deploy from GitHub Actions'
